fixed font and button spacing

--- a/public/styles/layout2.css
+++ b/public/styles/layout2.css
@@ -101,6 +101,10 @@ footer{
     background-color: #003D57;
   }
 
+  #similar{
+    margin-top:10px;
+  }
+
   button{
     background-color: #003D57;
     height: 30px;
